# atratus

./: .gitignore  .readthedocs.yml  CONTRIBUTING.md  README.md  azure-pipelines.yml  example.py  meson.build  pyproject.toml  requirements-dev.txt  requirements.txt
.azuredevops/pipelines/: azure-pipelines.yml
.azuredevops/pull_request_template/branches/: features.md  releases.md
configs/: _example_cfg.json
docs/: getting_started_developer.md  high_level_design.md  installation_and_use.md  logging.md
docs/source/: basic_usage.rst  changelog.rst  conf.py  contributing.rst  core_workflow.rst  database_configuration.rst  getting_started_developer.rst  high_level_design.rst  index.rst  installation.rst  installation_and_use.rst  logging.rst  logging_exceptions.rst
docs/source/_static/css/: dmpe.css
docs/source/static/css/: dmpe.css
geo_digital_tools/database/: connect.py  create.py  read.py  update.py
geo_digital_tools/utils/: exceptions.py
pipelines/: azure-pipelines.yml  azure_release_pipeline.yaml  azure_test_pipeline.yml
src/geo_digital_tools/: __init__.py  cygnet.py  database.py
src/geo_digital_tools/database/: Implement_test_unit.py  __init__.py  connect.py  create.py  create_v2.py  read.py  update.py  utils.py  write.py
src/geo_digital_tools/utils/: __init__.py  exceptions.py  gdt_logging.py  loggers.py  logging.py  statements.py
src/gswa_atratus/: __init__.py  cygnet.py  database.py
src/gswa_atratus/utils/: __init__.py  exceptions.py  loggers.py  statements.py
tests/: test_database.py  test_utils.py
tests/unit/: test_database.py  test_exceptions.py  test_logging.py  test_statement.py  test_utils.py
