[build-system]
requires = ["setuptools>=64", "setuptools_scm>=8"]
build-backend = "setuptools.build_meta"
#requires = ['meson-python']
#build-backend = "mesonpy"

[project]
name = 'geo_digital_tools'
dynamic = ["version"]
description = "A package designed to abstract GSWA internal database operations."
authors = [
  { name = "Geoscience Data Integrations Team - GSWA", email = "gdi.contact@demirs.wa.gov.au" },
]

readme = "README.md"
requires-python = ">=3.11"
license = { file = 'LICENSE' }

classifiers = [
  "Programming Language :: Python :: 3",
  "License :: OSI Approved :: Apache 2.0",
  "Operating System :: OS Independent",
]

dependencies = [
  'SQLAlchemy==2.0.36',
  'pandas==2.2.2',
  'pyodbc==5.2.0',
  #'opentelemetry-distro==1.12',
  'pydantic==2.9.2',
]

[project.optional-dependencies]
tests = ['pytest==8.1.1', 'pytest-cov==5.0.0']
dev = [
  'artifacts-keyring==0.3.6',
  'build==1.2.2',
  'pytest==8.1.1',
  'pytest-cov==5.0.0',
  'twine==5.1.1',
  ]

[project.urls]
Homepage = "https://github.com/Geological-Survey-of-Western-Australia"
Issues = "https://github.com/Geological-Survey-of-Western-Australia/issues"

[tool.setuptools_scm]
