[build-system]
requires = ["setuptools>=64", "setuptools_scm>=8"]
build-backend = "setuptools.build_meta"

[project]
name = 'geo_digital_tools'
dynamic = ["version"]
description = "A package designed to abstract GSWA internal database operations."
authors = [
  { name = "Geoscience Data Integrations Team - GSWA", email = "gdi.contact@demirs.wa.gov.au" },
]

readme = "README.md"
license = "GPL-3.0-only"
license-files = ["LICEN[CS]E*", "COPYING"]

classifiers = [
  "Programming Language :: Python :: 3",
  "Operating System :: OS Independent",
]

dependencies = [
  'SQLAlchemy~=2.0.36',
  'pandas~=2.2.2',
  'pyodbc~=5.2.0',
  'pydantic~=2.9.2',
]

[project.optional-dependencies]
tests = ['pytest==8.1.1', 'pytest-cov==5.0.0']
dev = [
  'artifacts-keyring',
  'build==1.2.2',
  'pytest==8.1.1',
  'pytest-cov==5.0.0',
  'twine',
]

docs = ['sphinx', 
  'sphinx-rtd-theme',
  'sphinx-autodoc-typehints',
  'sphinx-autobuild',
  'sphinx-copybutton',
  ]

[project.urls]
Homepage = "https://github.com/Geological-Survey-of-Western-Australia"
Issues = "https://github.com/Geological-Survey-of-Western-Australia/issues"

[tool.setuptools_scm]

[tool.ruff.lint]
select = ["D"]

[tool.ruff.lint.pydocstyle]
convention = "google"
